# python_backend

./: .gitignore
homework_1/: README.md  pyproject.toml
homework_1/app/: contractors.py  main.py  routers.py
homework_2/: README.md  pyproject.toml
homework_2/app/: contractors.py  main.py  routers.py  test_integration.py  test_modular.py
homework_4/: .env.dist  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
homework_4/api/: pokemons.py
homework_4/buildfiles/: celery.dockerfile  fastapi.dockerfile
homework_4/celery_app/: tasks.py  utils.py
homework_4/rabbitmq_data/rabbit@rabbitmq/: rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_durable_queue.DCL  rabbit_durable_route.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
homework_4/rabbitmq_data/rabbit@rabbitmq/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/: recovery.dets
homework_4/rabbitmq_data/rabbit@rabbitmq/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_persistent/: clean.dot  file_summary.ets  msg_store_index.ets
homework_4/rabbitmq_data/rabbit@rabbitmq/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_transient/: file_summary.ets  msg_store_index.ets
homework_4/routers/: pokemons.py
homework_4/schemas/: schemas.py
homework_4/src/: app.py  config.py
homework_4/src/models/: main.py
homework_4/src/router/: main.py
homework_4/src/worker/: main.py
