[tool.poetry]
name = "homework-4"
version = "0.1.0"
description = ""
authors = ["Alexander Buyantuev <63050861+alexbuyan@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
celery = "^5.3.4"
redis = "^5.0.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
